--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,24 @@
 .header {
   padding: 30px 10px 54px;
   background: #ECEBE8;
+  width: 100%;
 }
 
 @media screen and (min-width: 1100px) {
   .header {
     padding: 0;
     border-bottom: 1px solid #242424;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .header {
+    margin-bottom: 95px;
+    border-bottom: 1px solid #242424;
+    display: flex;
+    justify-content: center;
   }
 }
