--- a/blocks/nav/__header/nav__header.css
+++ b/blocks/nav/__header/nav__header.css
@@ -1,5 +1,14 @@
 .nav__header {
-  display: flex;
+  position: relative;
+  height: 70px;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: max-content max-content 1fr;
   align-items: center;
-  justify-content: space-between;
+}
+
+@media screen and (min-width: 1100px) {
+  .nav__header {
+    height: 61px;
+  }
 }
