--- a/blocks/nav/__link/nav__link.css
+++ b/blocks/nav/__link/nav__link.css
@@ -5,26 +5,31 @@
   font-style: normal;
   font-weight: 300;
   font-size: 16px;
+  line-height: 1.375;
   display: block;
-  transition: 0.3s linear;
+  padding-right: 10px;
+  padding-left: 10px;
+  position: relative;
+  transition: opacity .2s linear;
 }
 
-@media screen and (min-width: 1100px) {
-  .nav__link {
-    font-size: 14px;
-    margin: 0;
-  }
-
-  .nav__link:hover,
-  .nav__link:focus {
-    transform: scale(1.1);
-    color: #000;
-  }
+.nav__link:hover::before {
+  content: url(../../../images/header/ellipse-left.svg);
+  position: absolute;
+  height: 24px;
+  width: 10px;
+  left: 0;
+  top: -1px;
 }
 
-@media screen and (max-width: 1200px) {
-  .nav__item:hover .nav__link {
-    transform: translateX(10px);
-    color: #000;
-  }
-} 
+.nav__link:hover::after {
+  content: url(../../../images/header/ellipse-right.svg);
+  position: absolute;
+  height: 24px;
+  width: 10px;
+  top: -1px;
+}
+
+.nav__link:active {
+  opacity: .6;
+}
