--- a/blocks/slider/__dot/slider__dot.css
+++ b/blocks/slider/__dot/slider__dot.css
@@ -1,11 +1,24 @@
 .slider__dot {
-    display: inline-block;
-    height: 8px;
-    width: 8px;
-    background-image: url(../../../images/dot.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 8px;
-    margin: 8px;
-    cursor: pointer;
+  cursor: pointer;
+  height: 4px;
+  width: 4px;
+  margin-right: 16px;
+  background-color: transparent;
+  border: 1px solid #242424;
+  border-radius: 50%;
+  transition: 
+    background-color .2s ease,
+    box-shadow .2s ease;
+}
+
+.slider__dot:last-of-type {
+  margin-right: 0;
+}
+
+.slider__dot:hover {
+  background-color: #242424;
+}
+
+.slider__dot:active {
+  box-shadow: 0px 0px 0px 1px #242424;
 }
