--- a/blocks/slider/__dots/slider__dots.css
+++ b/blocks/slider/__dots/slider__dots.css
@@ -1,10 +1,16 @@
 .slider__dots {
-    margin-top: 24px;
-    margin-bottom: 1px;
-    display: inline-block;
-    transform: translateX(0);
+  display: flex;
+  align-items: center;
+  justify-self: end;
+  margin-right: 30px;
+  position: absolute;
+  top: 100px;
+  left: 25px;
+  z-index: 1;
 }
 
-.slider__dots:first-child {
-    margin-left: -8px;
+@media (min-width: 769px) {
+  .slider__dots {
+    position: initial;
+  }
 }
