--- a/pages/index.css
+++ b/pages/index.css
@@ -1,36 +1,31 @@
 @import url(../vendor/normalize/normalize.css);
 @import url(../vendor/fonts/fonts.css);
 
-/* Body */
 @import url(../blocks/body/body.css);
 
-/* Header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/_fixed/header_fixed.css);
 
-/* Navigation */
+@import url(../blocks/button-small/button-small.css);
+@import url(../blocks/button-small/__image/button-small__image.css);
+@import url(../blocks/button-small/__text/button-small__text.css);
+
 @import url(../blocks/nav/nav.css);
 @import url(../blocks/nav/__header/nav__header.css);
 @import url(../blocks/nav/__logo/nav__logo.css);
-@import url(../blocks/nav/__hamburger/nav__hamburger.css);
-@import url(../blocks/nav/__bar/nav__bar.css);
-@import url(../blocks/nav/__bar/_position/nav__bar_position_top.css);
-@import url(../blocks/nav/__bar/_position/nav__bar_position_middle.css);
-@import url(../blocks/nav/__bar/_position/nav__bar_position_bottom.css);
-@import url(../blocks/nav/__list/nav__list.css);
-@import url(../blocks/nav/__list/_show/nav__list_show.css);
+@import url(../blocks/nav/__burger/nav__burger.css);
+@import url(../blocks/nav/__burger/_active/nav__burger_active.css);
+@import url(../blocks/nav/__container/nav__container.css);
+@import url(../blocks/nav/__container/_show/nav__container_show.css);
 @import url(../blocks/nav/__item/nav__item.css);
-@import url(../blocks/nav/__item/_vertical-line/nav__item_vertical-line.css);
 @import url(../blocks/nav/__link/nav__link.css);
+@import url(../blocks/nav/__links/nav__links.css);
+@import url(../blocks/nav/__social/nav__social.css);
+@import url(../blocks/nav/__social-link/nav__social-link.css);
 @import url(../blocks/nav/__button/nav__button.css);
-@import url(../blocks/nav/__projects-button/nav__projects-button.css);
+@import url(../blocks/nav/__button-back/nav__button-back.css);
 @import url(../blocks/nav/__arrow/nav__arrow.css);
 @import url(../blocks/nav/__arrow/_right/nav__arrow_right.css);
-
-/* Aside */
-@import url(../blocks/aside/aside.css);
-@import url(../blocks/aside/__button/aside__button.css);
-@import url(../blocks/aside/__arrow/aside__arrow.css);
 
 @import url(../blocks/preview-project/preview-project.css);
 @import url(../blocks/preview-project/__title/preview-project__title.css);
@@ -81,32 +76,32 @@
 
 @import url(../blocks/title-h6/title-h6.css);
 /* @import url(../blocks/button/button.css); */
-@import url(../blocks/slider/__container/slider__container.css);
-@import url(../blocks/slider/slider.css);
-@import url(../blocks/slider/__slide/slider__slide.css);
-@import url(../blocks/slider/__title-container/slider__title-container.css);
-@import url(../blocks/slider/__button-container/slider__button-container.css);
-@import url(../blocks/slider/__text/slider__text.css);
-@import url(../blocks/slider/__dots/slider__dots.css);
-@import url(../blocks/slider/__author/slider__author.css);
-@import url(../blocks/slider/__slide/slider__slide_active.css);
-@import url(../blocks/slider/__dot/slider__dot.css);
-@import url(../blocks/slider/__dot/slider__dot_active.css);
-@import url(../blocks/slider/__more/slider__more.css);
-@import url(../blocks/slider-btn/slider-btn.css);
-@import url(../blocks/slider-btn/_part/slider-btn_part_arrow.css);
-@import url(../blocks/slider-btn/_part/slider-btn_part_circle.css);
-@import url(../blocks/slider-btn/_part/slider-btn_part_svg.css);
-@import url(../blocks/slider-btn/_type/slider-btn_type_back.css);
 
-@import url(../blocks/slider-comments/__header/slider-comments__header.css);
-@import url(../blocks/slider-comments/__title/slider-comments__title.css);
-@import url(../blocks/slider-comments/__buttons/slider-comments__buttons.css);
-@import url(../blocks/slider-comments/__buttons/__button/slider-comments__button.css);
-@import url(../blocks/slider-comments/swiper/swiper.css);
-@import url(../blocks/slider-comments/swiper/swiper-pagination/swiper-pagination.css);
-@import url(../blocks/slider-comments/swiper/swiper-slide/__text/swiper-slide__text.css);
-@import url(../blocks/slider-comments/swiper/swiper-slide/__author/swiper-slide__author.css);
+@import url(../blocks/reviews/reviews.css);
+
+@import url(../blocks/slider/slider.css);
+@import url(../blocks/slider/__btn-arrow/slider__btn-arrow.css);
+@import url(../blocks/slider/__btn-circle/slider__btn-circle.css);
+@import url(../blocks/slider/__btn-circle/_left/slider__btn-circle_left.css);
+@import url(../blocks/slider/__btn-circle/_right/slider__btn-circle_right.css);
+@import url(../blocks/slider/__btn-svg/slider__btn-svg.css);
+@import url(../blocks/slider/__btn/slider__btn.css);
+@import url(../blocks/slider/__btn/_inactive/slider__btn_inactive.css);
+@import url(../blocks/slider/__btns/slider__btns.css);
+@import url(../blocks/slider/__dot/slider__dot.css);
+@import url(../blocks/slider/__dot/_active/slider__dot_active.css);
+@import url(../blocks/slider/__dots/slider__dots.css);
+@import url(../blocks/slider/__top-row/slider__top-row.css);
+@import url(../blocks/slider/__title/slider__title.css);
+@import url(../blocks/slider/__track/slider__track.css);
+@import url(../blocks/slider/__item/slider__item.css);
+@import url(../blocks/slider/__item/_offset/slider__item_offset.css);
+@import url(../blocks/slider/__logo-heading/slider__logo-heading.css);
+@import url(../blocks/slider/__text/slider__text.css);
+@import url(../blocks/slider/__text/_concise/slider__text_concise.css);
+@import url(../blocks/slider/__link/slider__link.css);
+
+
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__main/footer__main.css);
