--- a/blocks/nav/__social/nav__social.css
+++ b/blocks/nav/__social/nav__social.css
@@ -13,24 +13,22 @@
   position: relative;
 }
 
-.nav__social::before {
+.nav__social::before,
+.nav__social::after {
   content: '';
   position: absolute;
-  left: 0;
   bottom: 0;
   height: 50px;
   width: 1px;
   background-color: #242424;
 }
 
+.nav__social::before {
+  left: 0;
+}
+
 .nav__social::after {
-  content: '';
   right: 0;
-  bottom: 0;
-  position: absolute;
-  height: 50px;
-  width: 1px;
-  background-color: #242424;
 }
 
 @media screen and (max-width: 1435px) {
@@ -40,4 +38,16 @@
     padding-left: 20px;
     padding-right: 20px;
   }
+}
+
+@media screen and (max-width: 1100px) {
+  .nav__social {
+    height: auto;
+    grid-auto-flow: row;
+  }
+
+  .nav__social::before,
+  .nav__social::after {
+    display: none;
+}
 }
