--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,6 +1,7 @@
 .gallery {
-    margin: 0 auto;
+    width: 100%;
     min-width: 320px;
+    max-width: 1440px;
     background-color: #ECEBE8;
     box-sizing: border-box;
     padding-top: 144px;
