--- a/blocks/nav/__container/nav__container.css
+++ b/blocks/nav/__container/nav__container.css
@@ -9,6 +9,7 @@
   .nav__container {
     height: 100%;
     padding-left: 0;
+    padding-top: 0;
     display: flex;
     align-items: center;
   }
