--- a/blocks/nav/__links/nav__links.css
+++ b/blocks/nav/__links/nav__links.css
@@ -3,28 +3,28 @@
   padding: 0 29px 0 0;
   margin: 0;
   display: grid;
-  grid-auto-flow: column;
-  column-gap: 23px;
+  grid-auto-flow: row;
+  gap: 13px 23px;
   align-items: center;
 }
 
-@media screen and (max-width: 1435px) {
+@media screen and (min-width: 1100px) {
+  .nav__links {
+    grid-auto-flow: column;
+    row-gap: 2px;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 8px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .nav__links {
+    grid-template-rows: 1fr;
+  }
+}
+
+@media screen and (min-width: 1435px) {
   .nav__links {
     column-gap: 15px;
-  }
-}
-
-
-@media screen and (max-width: 1300px) {
-  .nav__links {
-    grid-template-rows: 1fr 1fr;
-    row-gap: 2px;
-  }
-}
-
-@media screen and (max-width: 1100px) {
-  .nav__links {
-    grid-auto-flow: row;
-    row-gap: 2px;
   }
 }
