--- a/blocks/nav/__social/nav__social.css
+++ b/blocks/nav/__social/nav__social.css
@@ -1,53 +1,57 @@
 .nav__social {
-  height: 100%;
+  height: auto;
   align-self: flex-end;
   list-style: none;
-  margin: 0 23px 0 0;
+  margin: 10px 23px 10px 0;
   padding: 0;
   display: grid;
   align-items: center;
-  grid-auto-flow: column;
-  column-gap: 16px;
-  padding-left: 25px;
-  padding-right: 25px;
+  grid-auto-flow: row;
+  padding: 10px 20px 10px 10px;
   position: relative;
+  row-gap: 13px;
+  border-top: 1px solid #242424;
+  border-bottom: 1px solid #242424;
 }
 
-.nav__social::before,
-.nav__social::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  height: 50px;
-  width: 1px;
-  background-color: #242424;
-}
-
-.nav__social::before {
-  left: 0;
-}
-
-.nav__social::after {
-  right: 0;
-}
-
-@media screen and (max-width: 1435px) {
+@media screen and (min-width: 1100px) {
   .nav__social {
+    height: 100%;
+    padding-left: 20px;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    grid-auto-flow: column;
     grid-template-rows: 1fr 1fr;
     column-gap: 12px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-}
-
-@media screen and (max-width: 1100px) {
-  .nav__social {
-    height: auto;
-    grid-auto-flow: row;
+    border: none;
   }
 
   .nav__social::before,
   .nav__social::after {
-    display: none;
+    content: '';
+    position: absolute;
+    bottom: 0;
+    height: 50px;
+    width: 1px;
+    background-color: #242424;
+  }
+  
+  .nav__social::before {
+    left: 0;
+  }
+  
+  .nav__social::after {
+    right: 0;
+  }
 }
+
+@media screen and (min-width: 1435px) {
+  .nav__social {
+    grid-template-rows: 1fr;
+    column-gap: 16px;
+    padding-left: 25px;
+    padding-right: 25px;
+  }
 }
