--- a/blocks/description-the-play/__author-name/description-the-play__author-name.css
+++ b/blocks/description-the-play/__author-name/description-the-play__author-name.css
@@ -1,6 +1,7 @@
 .description-the-play__author-name {
     min-width: 244px;
-    margin: 24px 0 0;
+    margin: 0 0 8px;
+    padding-top: 24px;
     font-family: 'Neue Machina', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -19,7 +20,7 @@
 
 @media screen and (min-width: 1200px) {
   .description-the-play__author-name {
-      margin-top: 17px;
+      padding-top: 17px;
       min-width: 240px;
   }
 }
