--- a/blocks/preview-project/__btn/preview-project__btn.css
+++ b/blocks/preview-project/__btn/preview-project__btn.css
@@ -1,19 +1,23 @@
 .preview-project__btn {
+  border: 1px solid #242424;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: linear-gradient(90deg, transparent 0% 50%, #242424 50% 100%);
+  background-size: 200% 100%;
+  background-position: 0 100%;
+  transition: background-position .4s;
+
   margin-bottom: 38px;
+  margin-left: 21.49%;
   padding: 16px 16px 18px;
   width: 240px;
   height: 56px;
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid #000;
   outline: none;
-  box-shadow: inset 0 0 0 0#ECEBE8;
-  cursor: pointer;
-  transition: 300ms ease-in;
 }
 
 .preview-project__btn:hover {
-  box-shadow: inset 240px 0 0 0 #000;
+  background-position: -100% 100%;
 }
 
 .preview-project__btn:hover .preview-project__btn-text {
@@ -21,20 +25,11 @@
 }
 
 .preview-project__btn:hover .preview-project__btn-union {
-  transition: 300ms ease-in;
-  filter: invert(100%) sepia(5%) saturate(0%) hue-rotate(50deg) brightness(105%) contrast(109%);
+  filter: invert(100%);
 }
 
-@media screen and (max-width: 415px) {
+@media (min-width: 416px) {
   .preview-project__btn {
-    margin-left: 20.55%;
-    margin-bottom: 38px;
-    padding: 16px 16px 18px;
-    width: 240px;
-    height: 56px;
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid #000;
-    transition: background-color .3s;
+    margin-left: 0;
   }
 }
