--- a/blocks/social-media/social-media.css
+++ b/blocks/social-media/social-media.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 64px;
 }
 
 @media screen and (min-width: 800px) {
